# ANNSG

./: .gitignore  CMakeLists.txt  README.md
include/: ANNSG.h  definations.h  distance.h  utils.h
src/: ANNSG.cpp
tests/: test_annsg.cpp  test_heap.cpp
